tests/invalid/any_to_ground_in_ite_cond.err_exp
any_to_ground_in_ite_cond.m:027: In clause for `main(di, uo)':
any_to_ground_in_ite_cond.m:027:   in argument 1 of call to predicate
any_to_ground_in_ite_cond.m:027:   `any_to_ground_in_ite_cond.p'/1:
any_to_ground_in_ite_cond.m:027:   scope error: attempt to bind a non-local
any_to_ground_in_ite_cond.m:027:   variable inside the condition of an
any_to_ground_in_ite_cond.m:027:   if-then-else.
any_to_ground_in_ite_cond.m:027:   Variable [38;5;87m`X'[39;49m has instantiatedness [38;5;203m`any',[39;49m
any_to_ground_in_ite_cond.m:027:   expected instantiatedness was [38;5;40m`ground'.[39;49m
For more information, recompile with `-E'.
